# cookiecutter-data-scaffold

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
docs/: INSTALLATION.md
docs/superpowers/plans/: 2026-07-04-cookiecutter-data-scaffold.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_bake_baseline.py  test_bake_batch.py  test_bake_dbt.py  test_bake_integration.py  test_bake_lakehouse.py  test_bake_streaming.py  test_pattern_manifest.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: sinks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/batch/: sinks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/batch/dags/: example_dag.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/lakehouse/: create_tables.sql  writer.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/streaming/: consumer.py  sinks.py
{{cookiecutter.project_slug}}/tests/: test_batch_dag.py  test_lakehouse_writer.py  test_streaming_consumer.py  test_streaming_sinks.py
{{cookiecutter.project_slug}}/transformation/: dbt_project.yml  profiles.yml
{{cookiecutter.project_slug}}/transformation/models/staging/: schema.yml  sources.yml  stg_events.sql
{{cookiecutter.project_slug}}/transformation/seeds/: events_seed.csv
