[project]
name = "cookiecutter-data-scaffold"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cookies>=0.7",
    "ruff>=0.6",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
